# drone-app

./: .gitignore  README.md  app.py  drone.py  input.txt  pyproject.toml
structures/: __init__.py  direction.py  point.py
tests/: test_drone.py  test_point.py
