[tool.poetry]
name = "bluepi-drone"
version = "0.1.0"
description = ""
authors = ["Pakorn Vongseela <18078609+pakornvs@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^6.2.5"
coverage = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
